src/app/pages/quickMaps/pages/costEffectiveness/interventionReview/pages/interventionBaseline/interventionBaseline.component.scss
@use '@angular/material' as mat;
@use '../interventionReviewPages.scss';
@import 'src/assets/scss/_colour';

.container {
  .content {
    overflow-x: hidden;
  }
}

.header-container {
  display: flex;
  border: 1px solid $color_primary;
  border-radius: 5px;
  background-color: white;
  align-items: center;
  justify-content: center;

  & .wideItem {
    flex-grow: 1;
    display: flex;
    margin: 1em 0.5em;
  }
}

.header-row {
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;

  .standard {
    width: 85%;
  }

  .compliance {
    width: 100%;
  }
}

.focus-mn {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-left: 1.5rem;

  .sub-header {
    color: $color_grey;
  }

  .divider {
    width: 3px;
    height: 15px;
    background: mat.get-color-from-palette($_primary_pallete, A700);
    margin-right: 0.5rem;
    border-radius: 4px;
  }
}

table {
  width: 100%;
  table-layout: fixed;
  font-family: 'Quicksand', sans-serif !important;
  padding: 0 0 0 2rem;

  .row-title {
    &.focus {
      font-weight: 500;
      color: mat.get-color-from-palette($_primary_pallete, default);
    }
  }

  th {
    &.mat-mdc-header-cell {
      border-bottom: none;
      text-align: left !important;
    }
  }
}

.intervention-baseline-panel {
  display: flex;
  align-items: center;
  padding: 10px;
  height: 50px;
  border-radius: 10px;
}

.item-input {
  border-radius: 5px;
}

.mat-mdc-icon-button {
  color: $color_primary;
  margin-left: 35px;
}

.double-cell {
  display: flex;
  justify-content: flex-start;
  align-items: center;

  button {
    margin-left: 2rem;
  }
}

input {
  width: 50px;
}

th {
  white-space: pre-wrap;
  word-break: normal;
}

.icon-display {
  transform: scale(0.6);
}
input {
  font-family: inherit;
  font-size: 100%;
  margin: 0;
  box-sizing: border-box;
  width: 4em;
  padding: 5px;
  height: 30px;
  border-radius: 5px;
  border: black 0.5px solid;
  text-align: center;
}
// // user edited values
input.ng-dirty {
  color: $color_input_blue;
  border-color: $color_input_blue;
}

